docs/assets/main.scss
---
---

$baseurl: "{{ site.baseurl }}";

// Use AAF Raleway Google Font
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

@import "variables";
@import "bootstrap/bootstrap";
@import "syntax-highlighting";
@import "bootstrap_customization";
@import "typeahead";
@import "font-awesome/fontawesome";
@import "font-awesome/solid";
@import "font-awesome/brands";
@import "bootstrap-callouts";

html,
body {
  // overflow-x: hidden; /* Prevent scroll on narrow devices */
}
main {
  min-height: 65vh;
}

.h1, .h2, .h3, .h4, .h5, .h6, 
h1, h2, h3, h4, h5, h6 {
  font-family: 'Raleway', sans-serif;
  font-style: normal;
  font-weight: 600;
}

.p {
  font-family: 'Lato', sans-serif;
}

.btn {
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  border-width: 2px;
}

.btn-primary {
  background-color: $primary;
  color: #000000;
}

.btn-link {
  text-decoration: none;
  color: darken($primary, 5%);
  &:hover, 
  &:focus, 
  &:active {
    text-decoration: none;
    color: darken($primary, 15%);
  }
}

.nav-link {
  text-transform: uppercase;
}

/*
 * Header
 */
header {
  background-color: #969696;
  background-image: url($baseurl + "/assets/images/aaf-image.jpg");
  background-size: cover;
  padding-bottom: 200px;
  margin-bottom: -200px;
}

.banner-hero-card {
  color: #EEEEEE;
  margin-right: 160px;
}

.footer-callout {
  background-color: #f2f2f2;
  .container {
    margin-top: -100px;
  }
}

/*
 * Footer
 */
.footer {
  padding: 120px 0;
  font-family: "Lato", sans-serif;
  font-weight: 100;
  font-style: normal;
  color: #dfdfdf;
  line-height: 1.8em;
  .footer-text {
    color: #f2f2f2;
    a {
      &:hover,
      &:focus {
        color: $aaf-yellow;
        text-decoration: none;
      }
    }
    ul {
      list-style: none;
    }
  }
  h5 {
    text-transform:  uppercase;
    font-family: "Lato", sans-serif;
    font-weight: 100;
    font-style: normal;
    color: #ffffff;
    &:after {
      content: "";
      background: #5F368A;
      height: 3px;
      display: block;
      margin-top: 10px;
      max-width: 50px;
    }
  }
  .footer-links {
    a {
      color: $info;
      text-decoration: none;
    }
  }
  .logo {
    width: 300px; /* Default size */
  }

  /* For screens smaller than 1400px */
  @media (max-width: 1400px) {
    .logo {
      width: 200px; /* Smaller size for medium screens */
    }
  }

  /* For screens smaller than 1000px */
  @media (max-width: 1000px) {
    .logo {
      width: 140px; /* Smaller size for smaller screens */
    }
  }

  /* For screens smaller than 400px */
  @media (max-width: 400px) {
    .logo {
      width: 120px; /* Even smaller size for very small screens */
    }
  }

  .ncris {
    width: 200px; /* Default size */
  }

  /* For screens smaller than 1000px */
  @media (max-width: 1000px) {
    .ncris {
      width: 140px; /* Smaller size for smaller screens */
    }
  }

  /* For screens smaller than 800px */
  @media (max-width: 800px) {
    .ncris {
      width: 120px; /* Even smaller size for very small screens */
    }
  }

  .socials {
    a {
      color: #dfdfdf;
      &:hover {
        color: $aaf-yellow;
      }
    }
    display: flex;
    justify-content: flex-start;
  }
  .socials i {
    margin-right: 7px;
    margin-top: 30px;
    margin-bottom: 30px;
    font-size: 30px;
  }
}

/*
 * Sidebar
 */
.sidebar {
  padding-top: 1.5rem;
  font-size: 0.9em;
  .list-group-item.active {
    color: #000000;
  }
}


/*
 * Utilities
 */

.border-top {
  border-top: 1px solid #e5e5e5;
}

.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

pre {
  background-color: #404040;
  color: #ccc;
}

// No underline for list items or buttons
code {
  font-size: 80%;
}

/* Force consistent style for console code */
.language-console {
  .highlight {
    pre, code, span {
      color: #fff;
    }
  }
}

/*
 * Cards
 */
.card {
  // min-width: 280px;
}

.card-container {
  margin: 1em;
  .card-header,
  .card-body,
  .card-footer {
    padding: 0.75em;
  }
  a.card-tut-link { 
    color: inherit;
    text-decoration: none;
  }
}

.card-category {
  .series {
    width: 2rem;
    height: 2rem;
  }
}

/*
 * Search
 */
#search-clear {
  display: none;
  border-color: #c6c6c6 !important; // Same as form-control default state
}

#search-input.form-control {
  &:focus {
    outline: 0 !important;
    border-color: #c6c6c6; // Same as form-control default state
    box-shadow: none;
  }
}

/*
 * Diffculty indicator
 */
.difficulty-indicator {
  background-image: url($baseurl + "/assets/images/level-of-difficulty.svg");
  background-position-y: 5px;
  background-position-x: -75px;
  background-repeat: no-repeat;
  display: inline-block;
  margin-left: 3px;
  margin-right: -3px;
  text-indent: -99999px;
  width: 75px;
}

.difficulty-indicator-1 {
  background-position-x: -60px;
}
.difficulty-indicator-2 {
  background-position-x: -45px;
}
.difficulty-indicator-3 {
  background-position-x: -30px;
}
.difficulty-indicator-4 {
  background-position-x: -15px;
}
.difficulty-indicator-5 {
  background-position-x: 0px;
}

/*
 * Sidebar items
 */ 
/* https://stackoverflow.com/questions/40463542/how-to-make-vertical-lines-between-list-items-using-css */

#up-next {
  a {
    &:hover {
      color: #ffffff;
    }
  }
}

.series-tutorial {
  position: relative;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: border-box;
  border: 1px solid $info;
  border-radius: 0.25rem;
  padding: 1.25rem;
  margin-bottom: 1.25rem;
  p {
    margin-bottom: 0;
    small {
      font-weight: bold;
      color: $secondary;
    }
  }
  &.completed {
    border: 1px solid rgba(0, 0, 0, 0.125);
  }
  span.tut-complete {
    position: absolute;
    top: -12px;
    right: -12px;
    font-size: 16px;
    width: 24px;
    height: 24px;
    text-align: center;
    vertical-align: middle;
    line-height: 24px;
    color: #fff;
    background: $success;
    border-radius: 12px;
    &:after {
      font-family: 'Font Awesome 5 Free';
      content: "\f00c";
    }
  }
}

